# TradeDesk

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: analysis.py  factors.py  finance.py  market.py  portfolio.py  strategy.py
backend/app/core/: config.py  database.py
docs/: analysis-module-design.md
frontend/: env.d.ts  index.html  package-lock.json  package.json
frontend/src/api/: index.ts
frontend/src/components/: CorrelationTab.vue  DistributionTab.vue  DrawdownTab.vue  KLineChart.vue  SharpeTab.vue
frontend/src/layouts/: DefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: app.ts
frontend/src/styles/: index.css
frontend/src/views/: Analysis.vue  Dashboard.vue  Factors.vue  Finance.vue  Market.vue  Portfolio.vue  Stocks.vue  Strategy.vue
reports/: 101_Formulaic_Alphas.md  国泰君安－基于短周期价量特征的多因子选股体系.md
