[project]
name = "tradedesk-backend"
version = "0.1.0"
description = "TradeDesk quantitative trading system backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "duckdb>=0.9.0",
    "pydantic-settings>=2.0.0",
    "pandas>=2.0.0",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "httpx>=0.24.0",
]
